# C2A

./: .gitignore  README.md  THE_CONVERSATION.md  active_lesson.py  ai_researcher.py  c2a_elegant_main.py  constraint_archetypes.py  conversation_c2a_philosophy.txt  elegant_ui.py  go  llm_client.py  llm_scenario_engine.py  llm_transmutation_judge.py  package-lock.json  package.json  requirements-updated.txt  requirements.txt  requirements_elegant.txt  rlm_config.py  rlm_engine.py  scaffolding_scheduler.py  setup.py  speed_track.py
c2a_runtime/: C2A.py  README.md  ai_researcher.py  c2a_desktop.py  c2a_desktop_ui.py  c2a_elegant_main.py  llm_client.py  llm_scenario_engine.py  progression.py  rlm_config.py
docs/: conversation_c2a_philosophy_part2.txt
extras/: batch_ingest_text_pdfs.py  build_llm_handoff.ps1  c2a_cortex_integrated.py  c2a_game_physics.py  constraint_scenarios.py  demo_ui.py  llm-meta-fixed.py  llm-meta-v2.py  llm-meta.py  test_elegant.py
llm_handoff/C2A_LLM_Pack/: C2A.py  MANIFEST.txt  README.md  START_HERE.md
llm_handoff/C2A_LLM_Pack/c2a_runtime/: C2A.py  constraint_archetypes.py  real_world_log.py  rlm_engine.py
llm_handoff/C2A_LLM_Pack/src-tauri/: tauri.conf.json
memory_data/: active_lesson.json  chroma.sqlite3  real_world_log.json
research_notes/: observation_log.jsonl
research_notes/session_notes/: session_0001.json  session_0002.json  session_0003.json  session_1770521859.json
src-tauri/: Cargo.toml
src-tauri/src/: main.rs
tauri-static/: index.html
ui/: c2a_training.html
ui/inspiration/: c2a_training_menu_updated.html
(+2 files in other folders)
